--- a/音乐2.1
+++ b/音乐2.1
@@ -1,7 +1,4 @@
-local player = game:GetService("Players").LocalPlayer
-local userInputService = game:GetService("UserInputService")
-local replicatedStorage = game:GetService("ReplicatedStorage")
-local tweenService = game:GetService("TweenService")
+local player = game:GetSe
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
