--- a/音乐2.1
+++ b/音乐2.1
@@ -1,7 +1,7 @@
 local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
-local tweenService = game:GetService("TweenService")
+local tweenService = game:GetService("TweenService") -- 添加TweenService用于透明度动画
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -30,64 +30,47 @@ local function CreateFullUI()
     
     -- ==================== 关键修复1：只在主框架启用拖动 ====================
     mainFrame.Active = true
-    
-    -- ==================== 新增：添加CanvasGroup用于整体透明度控制 ====================
-    local canvasGroup = Instance.new("CanvasGroup")
-    canvasGroup.GroupTransparency = 0  -- 初始完全不透明
-    canvasGroup.Parent = mainFrame
-    
-    -- 将mainFrame的所有现有子项重新父级到canvasGroup
-    local children = {}
-    for _, child in ipairs(mainFrame:GetChildren()) do
-        table.insert(children, child)
-    end
-    for _, child in ipairs(children) do
-        child.Parent = canvasGroup
-    end
+    local dragDetector = Instance.new("UIDragDetector") -- 保存引用以便添加事件监听
+    dragDetector.Parent = mainFrame
     -- ===================================================================
     
-    local dragDetector = Instance.new("UIDragDetector")
-    dragDetector.Parent = mainFrame
-    
-    -- ==================== 新增：拖动时的透明度变化功能 ====================
-    local originalTransparency = 0
-    local targetTransparency = 0.5  -- 拖动时的目标透明度
-    local tweenDuration = 0.2      -- 渐变持续时间
-    
+    -- ==================== 新增：拖动时透明效果 ====================
     -- 创建透明度变化的TweenInfo
     local tweenInfo = TweenInfo.new(
-        tweenDuration,
-        Enum.EasingStyle.Quad,
-        Enum.EasingDirection.Out
+        0.2, -- 动画时长
+        Enum.EasingStyle.Quad, -- 缓动样式
+        Enum.EasingDirection.Out -- 缓动方向
     )
     
     -- 拖动开始时的透明度变化
     dragDetector.DragStarted:Connect(function()
+        -- 使用TweenService创建平滑的半透明效果
         local transparencyTween = tweenService:Create(
-            canvasGroup,
+            mainFrame,
             tweenInfo,
-            {GroupTransparency = targetTransparency}
+            {BackgroundTransparency = 0.3} -- 变为半透明
         )
         transparencyTween:Play()
     end)
     
     -- 拖动结束时的透明度恢复
     dragDetector.DragEnded:Connect(function()
+        -- 恢复原始透明度
         local restoreTween = tweenService:Create(
-            canvasGroup,
+            mainFrame,
             tweenInfo,
-            {GroupTransparency = originalTransparency}
+            {BackgroundTransparency = 0} -- 恢复不透明
         )
         restoreTween:Play()
     end)
-    -- ===================================================================
+    -- ==================== 透明效果添加完成 ====================
     
     ApplyRoundedCorners(mainFrame, 12)
 
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, 0, 0, 30)
     titleBar.BackgroundColor3 = Color3.fromRGB(180, 180, 180)
-    titleBar.Parent = canvasGroup
+    titleBar.Parent = mainFrame
     
     -- ==================== 关键修复2：标题栏不单独设置拖动 ====================
     -- 移除了 titleBar.Active = true 和标题栏的UIDragDetector
@@ -147,7 +130,7 @@ local function CreateFullUI()
         box.TextColor3 = Color3.fromRGB(0, 0, 0)
         box.Font = Enum.Font.SourceSans
         box.TextSize = 14
-        box.Parent = canvasGroup
+        box.Parent = mainFrame
         ApplyRoundedCorners(box, 6)
         return box
     end
@@ -166,7 +149,7 @@ local function CreateFullUI()
         btn.TextSize = 14
         btn.TextColor3 = Color3.fromRGB(255, 255, 255)
         btn.BackgroundColor3 = color
-        btn.Parent = canvasGroup
+        btn.Parent = mainFrame
         ApplyRoundedCorners(btn, 8)
         return btn
     end
@@ -183,7 +166,7 @@ local function CreateFullUI()
         btn.Font = Enum.Font.SourceSansBold
         btn.TextSize = 12
         btn.BackgroundColor3 = color
-        btn.Parent = canvasGroup
+        btn.Parent = mainFrame
         ApplyRoundedCorners(btn, 6)
         return btn
     end
@@ -402,4 +385,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 拖动分离问题已修复，并添加了拖动透明度效果")
+print("音乐播放器UI已加载 - 拖动分离问题已修复，并添加了拖动透明效果")
