--- a/音乐2.1
+++ b/音乐2.1
@@ -2,6 +2,7 @@ local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 local tweenService = game:GetService("TweenService")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -28,19 +29,7 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 1
     mainFrame.Parent = screenGui
     
-    -- ==================== 关键修复1：安全的拖动设置 ====================
-    mainFrame.Active = true
-    local dragDetector = Instance.new("UIDragDetector")
-    dragDetector.Parent = mainFrame
-    
-    -- 创建CanvasGroup用于安全的透明度控制
-    local canvasGroup = Instance.new("CanvasGroup")
-    canvasGroup.GroupTransparency = 0  -- 初始完全不透明
-    canvasGroup.GroupColor3 = Color3.fromRGB(225, 225, 225) -- 明确设置组颜色
-    
-    -- 先设置CanvasGroup属性，再设置父级
-    canvasGroup.Parent = mainFrame
-    
+    -- ==================== 关键修复1：移除CanvasGroup和UIDragDetector ====================
     -- 保存原始背景色用于恢复
     local originalBackgroundColor = mainFrame.BackgroundColor3
     -- ===================================================================
@@ -50,8 +39,8 @@ local function CreateFullUI()
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, 0, 0, 30)
     titleBar.BackgroundColor3 = Color3.fromRGB(180, 180, 180)
+    titleBar.Parent = mainFrame
     
-    -- 先创建titleBar，稍后重新父级到canvasGroup
     ApplyRoundedCorners(titleBar, 12)
 
     local titleLabel = Instance.new("TextLabel")
@@ -95,59 +84,56 @@ local function CreateFullUI()
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
 
-    -- ==================== 关键修复2：安全的透明度效果 ====================
-    -- 使用更保守的透明度设置，避免过度变白
-    local function SetupSafeTransparencyEffect()
-        local isDragging = false
-        
-        -- 安全的拖动开始处理
-        dragDetector.DragStarted:Connect(function()
-            if isDragging then return end
-            isDragging = true
+    -- ==================== 关键修复2：使用传统拖动系统 ====================
+    local dragging = false
+    local dragInput, dragStart, startPos
+
+    local function update(input)
+        local delta = input.Position - dragStart
+        mainFrame.Position = UDim2.new(startPos.X.Scale, startPos.X.Offset + delta.X, startPos.Y.Scale, startPos.Y.Offset + delta.Y)
+    end
+
+    titleBar.InputBegan:Connect(function(input)
+        if input.UserInputType == Enum.UserInputType.MouseButton1 then
+            dragging = true
+            dragStart = input.Position
+            startPos = mainFrame.Position
             
-            -- 使用更温和的透明度变化（从0.3改为0.15，避免过度变白）
-            local tweenInfo = TweenInfo.new(
-                0.2, -- 动画时长
-                Enum.EasingStyle.Quad, -- 缓动样式
-                Enum.EasingDirection.Out -- 缓动方向
-            )
+            -- 轻微变暗效果而不是透明
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local darkenTween = tweenService:Create(mainFrame, tweenInfo, {BackgroundColor3 = Color3.fromRGB(200, 200, 200)})
+            darkenTween:Play()
             
-            -- 只修改CanvasGroup的透明度，不修改背景色
-            local transparencyTween = tweenService:Create(
-                canvasGroup,
-                tweenInfo,
-                {GroupTransparency = 0.15} -- 轻微半透明效果
-            )
-            transparencyTween:Play()
-        end)
-        
-        -- 安全的拖动结束处理
-        dragDetector.DragEnded:Connect(function()
-            if not isDragging then return end
-            isDragging = false
-            
-            -- 恢复透明度
-            local tweenInfo = TweenInfo.new(
-                0.3, -- 稍长的恢复时间
-                Enum.EasingStyle.Quad,
-                Enum.EasingDirection.Out
-            )
-            
-            local restoreTween = tweenService:Create(
-                canvasGroup,
-                tweenInfo,
-                {GroupTransparency = 0} -- 恢复完全不透明
-            )
-            restoreTween:Play()
-            
-            -- 确保背景色正确恢复
-            task.defer(function()
-                if mainFrame.BackgroundColor3 ~= originalBackgroundColor then
-                    mainFrame.BackgroundColor3 = originalBackgroundColor
+            input.Changed:Connect(function()
+                if input.UserInputState == Enum.UserInputState.End then
+                    dragging = false
                 end
             end)
-        end)
-    end
+        end
+    end)
+
+    titleBar.InputChanged:Connect(function(input)
+        if input.UserInputType == Enum.UserInputType.MouseMovement then
+            dragInput = input
+        end
+    end)
+
+    userInputService.InputChanged:Connect(function(input)
+        if input == dragInput and dragging then
+            update(input)
+        end
+    end)
+
+    titleBar.InputEnded:Connect(function(input)
+        if input.UserInputType == Enum.UserInputType.MouseButton1 then
+            dragging = false
+            
+            -- 恢复原始颜色
+            local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local restoreTween = tweenService:Create(mainFrame, tweenInfo, {BackgroundColor3 = originalBackgroundColor})
+            restoreTween:Play()
+        end
+    end)
     -- ===================================================================
 
     -- 输入框创建函数
@@ -160,6 +146,7 @@ local function CreateFullUI()
         box.TextColor3 = Color3.fromRGB(0, 0, 0)
         box.Font = Enum.Font.SourceSans
         box.TextSize = 14
+        box.Parent = mainFrame
         ApplyRoundedCorners(box, 6)
         return box
     end
@@ -174,6 +161,7 @@ local function CreateFullUI()
         btn.TextSize = 14
         btn.TextColor3 = Color3.fromRGB(255, 255, 255)
         btn.BackgroundColor3 = color
+        btn.Parent = mainFrame
         ApplyRoundedCorners(btn, 8)
         return btn
     end
@@ -187,12 +175,12 @@ local function CreateFullUI()
         btn.Font = Enum.Font.SourceSansBold
         btn.TextSize = 12
         btn.BackgroundColor3 = color
+        btn.Parent = mainFrame
         ApplyRoundedCorners(btn, 6)
         return btn
     end
 
-    -- ==================== 关键修复3：正确的父子层级设置 ====================
-    -- 先创建所有UI元素，然后统一设置父级到canvasGroup
+    -- ==================== 关键修复3：直接创建UI元素到mainFrame ====================
     local musicIDBox = CreateInputBox(0.2, "[Music ID]", 0.9, 0.05)
     local volumeBox = CreateInputBox(0.4, "[Volume] (0.1-100)", 0.4, 0.05)
     local pitchBox = CreateInputBox(0.4, "[Pitch] (0.1-100)", 0.4, 0.55)
@@ -205,16 +193,6 @@ local function CreateFullUI()
     loopToggle.TextColor3 = Color3.fromRGB(0, 200, 0)
     
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(180, 180, 255))
-    
-    -- 将所有UI元素父级到canvasGroup
-    local uiElements = {
-        titleBar, musicIDBox, volumeBox, pitchBox, 
-        playButton, stopButton, loopToggle, modeButton
-    }
-    
-    for _, element in ipairs(uiElements) do
-        element.Parent = canvasGroup
-    end
     -- ===================================================================
     
     -- 音频控制系统
@@ -257,32 +235,11 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- ==================== 关键修复4：防止UI变白的保护机制 ====================
-    -- 添加背景色保护，防止意外变白
-    local heartbeatConnection = game:GetService("RunService").Heartbeat:Connect(function()
-        -- 检查并修复背景色
-        if mainFrame.BackgroundColor3 == Color3.fromRGB(255, 255, 255) then
-            mainFrame.BackgroundColor3 = originalBackgroundColor
-        end
-        
-        -- 检查并修复过度透明
-        if canvasGroup.GroupTransparency > 0.5 then
-            canvasGroup.GroupTransparency = 0
-        end
-    end)
-    
-    -- 清理连接
-    screenGui.AncestryChanged:Connect(function()
-        if not screenGui:IsDescendantOf(game) then
-            heartbeatConnection:Disconnect()
-        end
-    end)
+    -- ==================== 关键修复4：移除不必要的保护机制 ====================
+    -- 现在使用简单的颜色变化而不是透明度，不需要复杂的保护机制
     -- ===================================================================
     
-    -- 设置安全的透明度效果
-    SetupSafeTransparencyEffect()
-    
-    -- 音乐控制功能（保持不变）
+    -- 音乐控制功能
     local function generateNaturalName()
         local prefixes = {"Music", "Sound", "Track", "Audio", "BG", "SFX", "Ambient"}
         local suffixes = {"Player", "System", "Device", "Box", "Machine", "Unit"}
@@ -451,4 +408,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - UI变白问题已彻底修复，安全的透明效果已启用")
+print("音乐播放器UI已加载 - UI变白问题已彻底修复，使用传统拖动系统")
