--- a/音乐2.1
+++ b/音乐2.1
@@ -1,7 +1,7 @@
 local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
-local tweenService = game:GetService("TweenService") -- 添加TweenService
+local tweenService = game:GetService("TweenService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -13,6 +13,17 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
+-- 添加阴影效果函数
+local function ApplyShadowEffect(uiElement)
+    local uiStroke = Instance.new("UIStroke")
+    uiStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+    uiStroke.Color = Color3.fromRGB(0, 0, 0)
+    uiStroke.Transparency = 0.8
+    uiStroke.Thickness = 2
+    uiStroke.Parent = uiElement
+    return uiStroke
+end
+
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
@@ -20,76 +31,68 @@ local function CreateFullUI()
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
 
+    -- ==================== 主容器美化 ====================
     local mainFrame = Instance.new("Frame")
-    mainFrame.Size = UDim2.new(0, 300, 0, 200)
+    mainFrame.Size = UDim2.new(0, 300, 0, 200) -- 保持原有尺寸
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(225, 225, 225) -- 浅灰色背景
-    mainFrame.BackgroundTransparency = 0 -- 初始完全不透明
-    mainFrame.BorderSizePixel = 1
+    mainFrame.BackgroundColor3 = Color3.fromRGB(35, 35, 45) -- 深色现代背景
+    mainFrame.BackgroundTransparency = 0
+    mainFrame.BorderSizePixel = 0
     mainFrame.Parent = screenGui
     
-    -- ==================== 关键修复：安全的拖动系统 ====================
-    mainFrame.Active = true
-    local dragDetector = Instance.new("UIDragDetector")
-    dragDetector.Parent = mainFrame
-    
-    -- 安全的透明度动画设置
-    local tweenInfo = TweenInfo.new(
-        0.2, -- 动画时长
-        Enum.EasingStyle.Quad, -- 缓动样式
-        Enum.EasingDirection.Out -- 缓动方向
-    )
-    
-    -- 拖动开始时轻微变透明
-    dragDetector.DragStarted:Connect(function()
-        local transparencyTween = tweenService:Create(
-            mainFrame,
-            tweenInfo,
-            {BackgroundTransparency = 0.1} -- 仅10%透明度，避免过度变白
-        )
-        transparencyTween:Play()
-    end)
-    
-    -- 拖动结束时恢复不透明
-    dragDetector.DragEnded:Connect(function()
-        local restoreTween = tweenService:Create(
-            mainFrame,
-            tweenInfo,
-            {BackgroundTransparency = 0} -- 恢复完全不透明
-        )
-        restoreTween:Play()
-    end)
-    -- ===================================================================
+    -- 添加渐变背景效果
+    local gradient = Instance.new("UIGradient")
+    gradient.Color = ColorSequence.new({
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(40, 40, 50)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(30, 30, 40))
+    })
+    gradient.Rotation = 45
+    gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-
+    ApplyShadowEffect(mainFrame)
+    
+    -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
-    titleBar.Size = UDim2.new(1, 0, 0, 30)
-    titleBar.BackgroundColor3 = Color3.fromRGB(180, 180, 180)
+    titleBar.Size = UDim2.new(1, -20, 0, 30)
+    titleBar.Position = UDim2.new(0, 10, 0, 5)
+    titleBar.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+    titleBar.BackgroundTransparency = 0
+    titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
-    ApplyRoundedCorners(titleBar, 12)
-
+    
+    -- 标题栏渐变
+    local titleGradient = Instance.new("UIGradient")
+    titleGradient.Color = ColorSequence.new({
+        ColorSequenceKeypoint.new(0, Color3.fromRGB(70, 100, 180)),
+        ColorSequenceKeypoint.new(1, Color3.fromRGB(60, 80, 160))
+    })
+    titleGradient.Parent = titleBar
+    
+    ApplyRoundedCorners(titleBar, 8)
+    
     local titleLabel = Instance.new("TextLabel")
-    titleLabel.Size = UDim2.new(1, -60, 1, 0)
-    titleLabel.Position = UDim2.new(0, 5, 0, 0)
-    titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]"
-    titleLabel.TextColor3 = Color3.fromRGB(50, 50, 50)
-    titleLabel.TextSize = 18
-    titleLabel.Font = Enum.Font.SourceSansBold
+    titleLabel.Size = UDim2.new(1, -80, 1, 0)
+    titleLabel.Position = UDim2.new(0, 10, 0, 0)
+    titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]" -- 保持原有标题
+    titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
+    titleLabel.TextSize = 14
+    titleLabel.Font = Enum.Font.GothamBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
+    -- ==================== 控制按钮美化 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -30, 0.5, -12.5)
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
-    closeButton.Text = "X"
-    closeButton.Font = Enum.Font.SourceSansBold
-    closeButton.TextSize = 16
+    closeButton.Text = "×"
+    closeButton.Font = Enum.Font.GothamBold
+    closeButton.TextSize = 18
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    closeButton.BackgroundColor3 = Color3.fromRGB(200, 50, 50)
+    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
@@ -102,73 +105,118 @@ local function CreateFullUI()
     twinButton.Size = UDim2.new(0, 25, 0, 25)
     twinButton.Position = UDim2.new(1, -65, 0.5, -12.5)
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
-    twinButton.Text = "Twin"
-    twinButton.Font = Enum.Font.SourceSansBold
+    twinButton.Text = "T"
+    twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    twinButton.BackgroundColor3 = Color3.fromRGB(120, 120, 200)
+    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
 
-    -- 输入框创建函数
-    local function CreateInputBox(posY, placeholder, sizeX, posX)
+    -- ==================== 输入框美化 ====================
+    local function CreateStyledInputBox(posY, placeholder, sizeX, posX)
+        local container = Instance.new("Frame")
+        container.Size = UDim2.new(sizeX, 0, 0, 28)
+        container.Position = UDim2.new(posX, 0, posY, 0)
+        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+        container.BorderSizePixel = 0
+        container.Parent = mainFrame
+        ApplyRoundedCorners(container, 6)
+        ApplyShadowEffect(container)
+        
         local box = Instance.new("TextBox")
-        box.Size = UDim2.new(sizeX, 0, 0, 25)
-        box.Position = UDim2.new(posX, 0, posY, 0)
+        box.Size = UDim2.new(1, -10, 1, -6)
+        box.Position = UDim2.new(0, 5, 0, 3)
         box.PlaceholderText = placeholder
-        box.BackgroundColor3 = Color3.fromRGB(245, 245, 245)
-        box.TextColor3 = Color3.fromRGB(0, 0, 0)
-        box.Font = Enum.Font.SourceSans
-        box.TextSize = 14
-        box.Parent = mainFrame
-        ApplyRoundedCorners(box, 6)
+        box.BackgroundTransparency = 1
+        box.TextColor3 = Color3.fromRGB(255, 255, 255)
+        box.Font = Enum.Font.Gotham
+        box.TextSize = 12
+        box.PlaceholderColor3 = Color3.fromRGB(180, 180, 200)
+        box.Parent = container
+        
         return box
     end
 
-    local musicIDBox = CreateInputBox(0.2, "[Music ID]", 0.9, 0.05)
-    local volumeBox = CreateInputBox(0.4, "[Volume] (0.1-100)", 0.4, 0.05)
-    local pitchBox = CreateInputBox(0.4, "[Pitch] (0.1-100)", 0.4, 0.55)
+    local musicIDBox = CreateStyledInputBox(0.18, "输入音乐ID...", 0.9, 0.05)
+    local volumeBox = CreateStyledInputBox(0.38, "音量 0.1-100", 0.4, 0.05)
+    local pitchBox = CreateStyledInputBox(0.38, "音调 0.1-100", 0.4, 0.55)
 
-    -- 按钮创建函数
-    local function CreateButton(text, posX, posY, sizeX, color)
+    -- ==================== 功能按钮美化 ====================
+    local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 30)
+        btn.Size = UDim2.new(sizeX, 0, 0, 32)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
-        btn.Font = Enum.Font.SourceSansBold
-        btn.TextSize = 14
+        btn.Font = Enum.Font.GothamSemibold
+        btn.TextSize = 13
         btn.TextColor3 = Color3.fromRGB(255, 255, 255)
         btn.BackgroundColor3 = color
+        btn.AutoButtonColor = true
+        btn.BorderSizePixel = 0
         btn.Parent = mainFrame
+        
+        -- 按钮悬停效果
+        btn.MouseEnter:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
+                math.min(color.R * 255 + 15, 255),
+                math.min(color.G * 255 + 15, 255),
+                math.min(color.B * 255 + 15, 255)
+            )})
+            tween:Play()
+        end)
+        
+        btn.MouseLeave:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = color})
+            tween:Play()
+        end)
+        
         ApplyRoundedCorners(btn, 8)
+        ApplyShadowEffect(btn)
         return btn
     end
 
-    local playButton = CreateButton("Play", 0.05, 0.65, 0.4, Color3.fromRGB(100, 100, 100))
-    local stopButton = CreateButton("Stop", 0.55, 0.65, 0.4, Color3.fromRGB(150, 50, 50))
+    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, Color3.fromRGB(70, 180, 100))
+    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- 切换按钮创建函数
+    -- ==================== 切换按钮美化 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 25)
+        btn.Size = UDim2.new(sizeX, 0, 0, 24)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
-        btn.Font = Enum.Font.SourceSansBold
-        btn.TextSize = 12
+        btn.Font = Enum.Font.Gotham
+        btn.TextSize = 11
+        btn.TextColor3 = Color3.fromRGB(255, 255, 255)
         btn.BackgroundColor3 = color
+        btn.AutoButtonColor = true
+        btn.BorderSizePixel = 0
         btn.Parent = mainFrame
+        
         ApplyRoundedCorners(btn, 6)
+        ApplyShadowEffect(btn)
         return btn
     end
 
-    local loopToggle = CreateToggleButton("Loop: ON", 0.55, 0.85, 0.4, Color3.new(0,0,0))
-    loopToggle.BackgroundTransparency = 1
-    loopToggle.TextColor3 = Color3.fromRGB(0, 200, 0)
+    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
+    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(180, 180, 255))
+    -- ==================== 添加分隔线 ====================
+    local separator = Instance.new("Frame")
+    separator.Size = UDim2.new(1, -20, 0, 1)
+    separator.Position = UDim2.new(0, 10, 0.58, 0)
+    separator.BackgroundColor3 = Color3.fromRGB(70, 70, 90)
+    separator.BorderSizePixel = 0
+    separator.Parent = mainFrame
 
-    -- 音频控制系统
+    -- ==================== 拖动系统 ====================
+    mainFrame.Active = true
+    mainFrame.Draggable = true
+
+    -- ==================== 音频控制系统 ====================
     local soundSystem = {
         LoopEnabled = true,
         ActiveSounds = {},
@@ -176,9 +224,9 @@ local function CreateFullUI()
         CurrentMode = "auto",
         ModeNames = {auto = "智能模式", mode1 = "缓存模式", mode2 = "遍历模式"},
         ModeColors = {
-            auto = Color3.fromRGB(180, 180, 255),
-            mode1 = Color3.fromRGB(180, 255, 180),
-            mode2 = Color3.fromRGB(255, 180, 180)
+            auto = Color3.fromRGB(150, 100, 220),
+            mode1 = Color3.fromRGB(100, 180, 120),
+            mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
         TwinMode = false
@@ -197,7 +245,7 @@ local function CreateFullUI()
     
     local function UpdateTwinModeButton()
         twinButton.BackgroundColor3 = soundSystem.TwinMode and 
-            Color3.fromRGB(70, 130, 200) or Color3.fromRGB(120, 120, 180)
+            Color3.fromRGB(70, 130, 200) or Color3.fromRGB(100, 100, 180)
     end
     
     twinButton.MouseButton1Click:Connect(function()
@@ -208,6 +256,7 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
+    -- ==================== 音乐控制功能 ====================
     local function generateNaturalName()
         local prefixes = {"Music", "Sound", "Track", "Audio", "BG", "SFX", "Ambient"}
         local suffixes = {"Player", "System", "Device", "Box", "Machine", "Unit"}
@@ -354,47 +403,31 @@ local function CreateFullUI()
             success = AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        playButton.BackgroundColor3 = success and Color3.fromRGB(70, 170, 70) or Color3.fromRGB(170, 70, 70)
-        task.delay(0.1, function() playButton.BackgroundColor3 = Color3.fromRGB(100, 100, 100) end)
+        playButton.BackgroundColor3 = success and Color3.fromRGB(70, 200, 100) or Color3.fromRGB(200, 70, 70)
+        task.delay(0.5, function() 
+            playButton.BackgroundColor3 = Color3.fromRGB(70, 180, 100) 
+        end)
     end
 
     local function handleStop()
         StopAllSounds()
-        stopButton.BackgroundColor3 = Color3.fromRGB(200, 70, 70)
-        task.delay(0.1, function() stopButton.BackgroundColor3 = Color3.fromRGB(150, 50, 50) end)
+        stopButton.BackgroundColor3 = Color3.fromRGB(250, 100, 100)
+        task.delay(0.5, function() 
+            stopButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80) 
+        end)
     end
     
     playButton.MouseButton1Click:Connect(handlePlayback)
     stopButton.MouseButton1Click:Connect(handleStop)
     loopToggle.MouseButton1Click:Connect(function()
         soundSystem.LoopEnabled = not soundSystem.LoopEnabled
-        loopToggle.Text = soundSystem.LoopEnabled and "Loop: ON" or "Loop: OFF"
-        loopToggle.TextColor3 = soundSystem.LoopEnabled and Color3.fromRGB(0, 200, 0) or Color3.fromRGB(200, 0, 0)
+        loopToggle.Text = soundSystem.LoopEnabled and "循环: ON" or "循环: OFF"
+        loopToggle.BackgroundColor3 = soundSystem.LoopEnabled and 
+            Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
-
-    -- ==================== 最终安全保护 ====================
-    -- 防止UI变白的额外保护
-    local heartbeatConnection = game:GetService("RunService").Heartbeat:Connect(function()
-        -- 确保背景色不会意外变成纯白
-        if mainFrame.BackgroundColor3 == Color3.fromRGB(255, 255, 255) then
-            mainFrame.BackgroundColor3 = Color3.fromRGB(225, 225, 225)
-        end
-        -- 确保透明度不会异常
-        if mainFrame.BackgroundTransparency > 0.5 then
-            mainFrame.BackgroundTransparency = 0
-        end
-    end)
-    
-    -- 清理连接
-    screenGui.AncestryChanged:Connect(function()
-        if not screenGui:IsDescendantOf(game) then
-            heartbeatConnection:Disconnect()
-        end
-    end)
-    -- =====================================================
 
     return screenGui
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 使用最终解决方案，UI变白问题已彻底修复")
+print("🎵 音乐播放器UI已加载 - 现代化美化完成！")
